fixed dependent overflow

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -867,7 +867,7 @@ border: 1px solid #333;
   float:left;
 }
 .dependent_products .product_wrap div.part {
-	height: 60px;
+	height: 80px;
 }
 .product_wrap div.part a {
   display: inline;
